; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_snowenc.c_qscale2qlog.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_snowenc.c_qscale2qlog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@QROOT = common dso_local global i32 0, align 4
@FF_QP2LAMBDA = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @qscale2qlog to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qscale2qlog(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @QROOT, align 4
  %4 = load i32, i32* %2, align 4
  %5 = sitofp i32 %4 to float
  %6 = load i64, i64* @FF_QP2LAMBDA, align 8
  %7 = sitofp i64 %6 to float
  %8 = fdiv float %5, %7
  %9 = fptosi float %8 to i32
  %10 = call i32 @log2(i32 %9)
  %11 = mul nsw i32 %3, %10
  %12 = call i32 @lrint(i32 %11)
  %13 = load i32, i32* @QROOT, align 4
  %14 = mul nsw i32 61, %13
  %15 = sdiv i32 %14, 8
  %16 = add nsw i32 %12, %15
  ret i32 %16
}

declare dso_local i32 @lrint(i32) #1

declare dso_local i32 @log2(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
